--- a/Python_and_SQL_GH.ipynb
+++ b/Python_and_SQL_GH.ipynb
@@ -626,7 +626,7 @@
       "id": "4d5deef4",
       "metadata": {},
       "source": [
-        "Задание 4.4 Напишите запрос, который выведет количество вакансий для каждого сочетания типа рабочего графика (schedule) и типа трудоустройства (employment), используемого в вакансиях. Какая пара находится на втором месте по популярности?"
+        "4.4 Напишите запрос, который выведет количество вакансий для каждого сочетания типа рабочего графика (schedule) и типа трудоустройства (employment), используемого в вакансиях. Какая пара находится на втором месте по популярности?"
       ]
     },
     {
